objects/Customer__c.object
<CustomObject>
    <description>Customer Information</description>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <description>Stores the cell phone Number of the Customer</description>
        <inlineHelpText>Customer&apos;s Cell Phone Number</inlineHelpText>
        <label>Customer Contact</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores the Email address of the Customer.</description>
        <inlineHelpText>Email address of the Customer</inlineHelpText>
        <label>Customer Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>The full Name of the Customer</description>
        <inlineHelpText>Name of the Customer</inlineHelpText>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <nameField>
        <displayFormat>A - {0000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>